# shieldmendai-core

./: .gitignore  CONTRIBUTING.md  INSTALL.md  LICENSE  PROJECT_STATUS.md  README.md  SHIELDMENDAI_MOBILE_DESIGN.md  SHIELDMENDAI_PRODUCT_SPEC.md  WEBSITE_HANDOFF.md  capacitor.config.json  extraction_manifest.json  funding.html  package-lock.json  package.json  pyproject.toml
android/app/: build.gradle
app/: README.md  app.js  index.html  styles.css  walletconnect.example.js
backend/: .env.example  README.md  server.py  shieldmendai-backend.service
backend/tools/: hash_beta_code.py
docs/: ARCHITECTURE.md  CNAME  CODEX_HANDOFF.md  CONFIGURATION.md  DEDICATED_SERVER_PLAN.md  EXTRACTION_PLAN.md  INCIDENTS_AND_NOTIFICATIONS.md  INSTALLATION_AND_LINUX_PILOT.md  PHASE8_CANARY_RUNBOOK.md  RECOVERY.md  REPAIRS.md  SECURITY_BOUNDARIES.md  SIMULATION.md  SOURCE_INVENTORY.md  TOKEN_PLAN.md  about.html  apk-download.html  archive-mode.html  beta-access.html  beta.html  community-token.html  community.html  dashboard.html  faq.html  funding.html  how-it-works.html  index.html  pricing.html  privacy.html  roadmap.html  security.html  simulator.html  site.js  styles.css  tax-pack.html  terms.html  testimonials.html  trust.html
docs/docs/: testimonials.html
examples/: phase7-scenario-catalog.yaml  shieldmendai.example.yaml  simulation-config.yaml
examples/canary/: dedicated-canary.yaml
examples/incidents/: incident-low.json
scripts/: resume_check.sh
tests/: test_phase2.py  test_phase3.py  test_phase4.py  test_phase5.py  test_phase6.py  test_phase7.py  test_phase8.py
(+50 files in other folders)
