[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "shieldmendai"
version = "0.3.0"
description = "Safe, self-hosted reliability and security recovery framework"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [{name = "ShieldMendAi"}]
dependencies = ["PyYAML>=6.0,<7.0"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
]

[project.scripts]
shieldmendai = "shieldmendai.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
